@@ -37,6 +37,7 @@ Other contributors, listed alphabetically, are:
 * Kenneth D. Mankoff <mankoff@gmail.com>
 * Kevin Davies <kdavies4@gmail.com>
 * Luke Campbell <luke.s.campbell@gmail.com>
+* Lorenz Sieben <sieben@gea.mpg.de>
 * Matthieu Dartiailh <marul@laposte.net>
 * Nate Bogdanowicz <natezb@gmail.com>
 * Peter Grayson <jpgrayson@gmail.com>
