@@ -7,6 +7,7 @@ Pint Changelog
 - `GenericPlainRegistry.parse_expression` now correctly returns a dimensionless Quantity when taking a float, int, or NaN (#2259)
 - Replace MIP with scipy in `Quantity.to_preferred` (#2264)
 - Add atomic unit of electric field gradient (`atomic_unit_of_electric_field_gradient`, `a_u_efg`) (#2269)
+- Fix problem with `to_compact()` and numpy quantities (#2274)
 
 
 0.25.1 (2025-11-06)
